Fix blockquote in li spacing

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -129,7 +129,7 @@ a {
   }
 }
 
-.markdown *:first-child {
+.markdown > *:first-child {
   margin-top: 0;
 }
 
